; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_isdnl3.c_releasestack_isdnl3.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/isdn/hisax/extr_isdnl3.c_releasestack_isdnl3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.PStack = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32, i32*, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @releasestack_isdnl3(%struct.PStack* %0) #0 {
  %2 = alloca %struct.PStack*, align 8
  store %struct.PStack* %0, %struct.PStack** %2, align 8
  br label %3

3:                                                ; preds = %9, %1
  %4 = load %struct.PStack*, %struct.PStack** %2, align 8
  %5 = getelementptr inbounds %struct.PStack, %struct.PStack* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 3
  %7 = load i64, i64* %6, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %15

9:                                                ; preds = %3
  %10 = load %struct.PStack*, %struct.PStack** %2, align 8
  %11 = getelementptr inbounds %struct.PStack, %struct.PStack* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 3
  %13 = load i64, i64* %12, align 8
  %14 = call i32 @release_l3_process(i64 %13)
  br label %3

15:                                               ; preds = %3
  %16 = load %struct.PStack*, %struct.PStack** %2, align 8
  %17 = getelementptr inbounds %struct.PStack, %struct.PStack* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 2
  %19 = load i32*, i32** %18, align 8
  %20 = icmp ne i32* %19, null
  br i1 %20, label %21, label %35

21:                                               ; preds = %15
  %22 = load %struct.PStack*, %struct.PStack** %2, align 8
  %23 = getelementptr inbounds %struct.PStack, %struct.PStack* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 2
  %25 = load i32*, i32** %24, align 8
  %26 = call i32 @StopAllL3Timer(i32* %25)
  %27 = load %struct.PStack*, %struct.PStack** %2, align 8
  %28 = getelementptr inbounds %struct.PStack, %struct.PStack* %27, i32 0, i32 0
  %29 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %28, i32 0, i32 2
  %30 = load i32*, i32** %29, align 8
  %31 = call i32 @kfree(i32* %30)
  %32 = load %struct.PStack*, %struct.PStack** %2, align 8
  %33 = getelementptr inbounds %struct.PStack, %struct.PStack* %32, i32 0, i32 0
  %34 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %33, i32 0, i32 2
  store i32* null, i32** %34, align 8
  br label %35

35:                                               ; preds = %21, %15
  %36 = load %struct.PStack*, %struct.PStack** %2, align 8
  %37 = getelementptr inbounds %struct.PStack, %struct.PStack* %36, i32 0, i32 0
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 1
  %39 = call i32 @FsmDelTimer(i32* %38, i32 54)
  %40 = load %struct.PStack*, %struct.PStack** %2, align 8
  %41 = getelementptr inbounds %struct.PStack, %struct.PStack* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i32 0, i32 0
  %43 = call i32 @skb_queue_purge(i32* %42)
  ret void
}

declare dso_local i32 @release_l3_process(i64) #1

declare dso_local i32 @StopAllL3Timer(i32*) #1

declare dso_local i32 @kfree(i32*) #1

declare dso_local i32 @FsmDelTimer(i32*, i32) #1

declare dso_local i32 @skb_queue_purge(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
